--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "theme-change": "^2.0.2",
+    "vanilla-lazyload": "^17.8.2"
   }
 }
