--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tailwindcss -i ./src/css/input.css -o ./dist/output.css --watch"
+    "watch": "npx tailwindcss -i ./src/css/input.css -o ./src/dist/output.css --watch"
   },
   "keywords": [],
   "author": "Susilo Suharsono",
